@startuml

'skinparam monochrome true
hide circle 
hide footbox

' Data
class HierarchicalData #LightGreen

' Wpf
class Canvas #LightBlue
class UserControl #LightBlue


' Interfaces
interface IColorScheme #LightCoral {
    SolidColorBrush GetMediaBrush(key)
}

interface IHierarchicalData #LightCoral

interface IRenderer  #LightCoral {
    RenderToDrawingContext(with, height, drawingContext)
    Transform(point)
    LoadData(hierarchicalData)
}

HierarchicalData -up--|> IHierarchicalData

HierachicalDataContext --> IHierarchicalData
HierachicalDataContext --> IColorScheme

ColorScheme -up--|> IColorScheme

DrawingCanvas -up--|> Canvas

DrawingCanvas --> IRenderer : DataContext

HierarchicalDataViewBase -up--> UserControl
HierarchicalDataViewBase --> HierachicalDataContext : DataContext

CirclePackingView -up--|> HierarchicalDataViewBase
CirclePackingView --> DrawingCanvas
TreeMapView -up--|> HierarchicalDataViewBase
TreeMapView --> DrawingCanvas


SquarifiedTreeMapRenderer -up--|> IRenderer
SquarifiedTreeMapRenderer --> IHierarchicalData
SquarifiedTreeMapRenderer --> IColorScheme
SquarifiedTreeMapRenderer --> SquarifiedTreeMapLayout : new

CirclePackingRenderer -up--|> IRenderer
CirclePackingRenderer --> IHierarchicalData
CirclePackingRenderer --> IColorScheme
CirclePackingRenderer --> CirclePackingLayout : new

'Warum hat hierarchical Data context Colorscheme unt nicht das interface
@enduml